K8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-backend
  namespace: saleor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saleor-backend
  template:
    metadata:
      labels:
        app: saleor-backend
    spec:
      containers:
        - name: backend
          image: 047719631188.dkr.ecr.us-east-1.amazonaws.com/saleor:3.20
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: saleor-backend
  namespace: saleor
spec:
  selector:
    app: saleor-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
