K8s/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-dashboard
  namespace: saleor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saleor-dashboard
  template:
    metadata:
      labels:
        app: saleor-dashboard
    spec:
      containers:
      - name: dashboard
        image: 047719631188.dkr.ecr.us-east-1.amazonaws.com/saleor-dashboard:latest
        ports:
        - containerPort: 80
---
# 7. Dashboard Service
apiVersion: v1
kind: Service
metadata:
  name: saleor-dashboard
  namespace: saleor
spec:
  selector:
    app: saleor-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
