K8s/jaegar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: saleor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: 047719631188.dkr.ecr.us-east-1.amazonaws.com/jaeger:latest
        ports:
        - containerPort: 16686
---
# 13. Jaeger Service
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: saleor
spec:
  selector:
    app: jaeger
  ports:
    - protocol: TCP
      port: 16686
      targetPort: 16686
  type: ClusterIP
