K8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: saleor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: 047719631188.dkr.ecr.us-east-1.amazonaws.com/redis:7.0-alpine
        ports:
        - containerPort: 6379
---
# 9. Redis Service
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: saleor
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
