K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-ingress
  namespace: saleor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: saleor.qeedis.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saleor-backend
            port:
              number: 80
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: saleor-dashboard
            port:
              number: 80
